--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
         "yiisoft/yii2-imagine": "dev-master",
-        
+        "yiisoft/yii2-authclient": "dev-master",
+
 	"synctech/yii2-sybase": "@dev",
         "synctech/yii2-sycomponent": "@dev",
         "kartik-v/yii2-grid": "@dev",
@@ -34,7 +35,6 @@
 	"kartik-v/yii2-mpdf": "@dev",
         "kartik-v/yii2-field-range": "*",
         "kartik-v/yii2-popover-x": "*",
-        "kartik-v/yii2-social": "dev-master",
         "2amigos/yii2-ckeditor-widget" : "~2.1",
         "2amigos/yii2-gallery-widget": "~1.0"
     },
