--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,63 @@
 {
-    "name": "yiisoft/yii2-app-advanced",
-    "description": "Yii 2 Advanced Project Template",
-    "keywords": ["yii2", "framework", "advanced", "project template"],
-    "homepage": "http://www.yiiframework.com/",
-    "type": "project",
-    "license": "BSD-3-Clause",
-    "support": {
-        "issues": "https://github.com/yiisoft/yii2/issues?state=open",
-        "forum": "http://www.yiiframework.com/forum/",
-        "wiki": "http://www.yiiframework.com/wiki/",
-        "irc": "irc://irc.freenode.net/yii",
-        "source": "https://github.com/yiisoft/yii2"
-    },
-    "minimum-stability": "stable",
-    "require": {
-        "php": ">=5.4.0",
-        "yiisoft/yii2": "~2.0.6",
-        "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
-        "yiisoft/yii2-imagine": "dev-master",
-        "yiisoft/yii2-authclient": "dev-master",
-
-	"synctech/yii2-sybase": "@dev",
-        "synctech/yii2-sycomponent": "@dev",
-        "kartik-v/yii2-grid": "@dev",
-	"kartik-v/yii2-widget-datetimepicker": "*",
-        "kartik-v/yii2-widget-fileinput": "@dev",
-        "kartik-v/yii2-widget-switchinput": "*",
-        "kartik-v/yii2-widget-select2": "@dev",
-        "kartik-v/yii2-widget-rating": "*",
-        "kartik-v/yii2-widget-growl": "*",
-        "kartik-v/yii2-widget-touchspin": "*",
-	"kartik-v/yii2-money": "@dev",
-	"kartik-v/yii2-mpdf": "@dev",
-        "kartik-v/yii2-field-range": "*",
-        "kartik-v/yii2-popover-x": "*",
-        "2amigos/yii2-ckeditor-widget" : "~2.1",
-        "2amigos/yii2-gallery-widget": "~1.0"
-    },
-    "require-dev": {
-        "yiisoft/yii2-debug": "~2.0.0",
-        "yiisoft/yii2-gii": "~2.0.0",
-        "yiisoft/yii2-faker": "~2.0.0",
-        "codeception/base": "^2.2.3",
-        "codeception/verify": "~0.3.1"
-    },
-    "config": {
-        "process-timeout": 3600,
-        "fxp-asset": {
-            "enabled": false
-        }
-    },
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
-        }
-    ]
+	"name" : "yiisoft/yii2-app-advanced",
+	"description" : "Yii 2 Advanced Project Template",
+	"keywords" : [
+		"yii2",
+		"framework",
+		"advanced",
+		"project template"
+	],
+	"homepage" : "http://www.yiiframework.com/",
+	"type" : "project",
+	"license" : "BSD-3-Clause",
+	"support" : {
+		"issues" : "https://github.com/yiisoft/yii2/issues?state=open",
+		"forum" : "http://www.yiiframework.com/forum/",
+		"wiki" : "http://www.yiiframework.com/wiki/",
+		"irc" : "irc://irc.freenode.net/yii",
+		"source" : "https://github.com/yiisoft/yii2"
+	},
+	"minimum-stability" : "stable",
+	"require" : {
+		"php" : ">=5.4.0",
+		"yiisoft/yii2" : "~2.0.6",
+		"yiisoft/yii2-bootstrap" : "~2.0.0",
+		"yiisoft/yii2-swiftmailer" : "~2.0.0 || ~2.1.0",
+		"yiisoft/yii2-imagine" : "dev-master",
+		"yiisoft/yii2-authclient" : "dev-master",
+		"synctech/yii2-sybase" : "@dev",
+		"synctech/yii2-sycomponent" : "@dev",
+		"kartik-v/yii2-grid" : "@dev",
+		"kartik-v/yii2-widget-datetimepicker" : "*",
+		"kartik-v/yii2-widget-fileinput" : "@dev",
+		"kartik-v/yii2-widget-switchinput" : "*",
+		"kartik-v/yii2-widget-select2" : "@dev",
+		"kartik-v/yii2-widget-rating" : "*",
+		"kartik-v/yii2-widget-growl" : "*",
+		"kartik-v/yii2-widget-touchspin" : "*",
+		"kartik-v/yii2-mpdf" : "@dev",
+		"kartik-v/yii2-field-range" : "*",
+		"kartik-v/yii2-popover-x" : "*",
+		"kartik-v/yii2-number" : "dev-master",
+		"2amigos/yii2-ckeditor-widget" : "~2.1",
+		"2amigos/yii2-gallery-widget" : "~1.0"
+	},
+	"require-dev" : {
+		"yiisoft/yii2-debug" : "~2.0.0",
+		"yiisoft/yii2-gii" : "~2.0.0",
+		"yiisoft/yii2-faker" : "~2.0.0",
+		"codeception/base" : "^2.2.3",
+		"codeception/verify" : "~0.3.1"
+	},
+	"config" : {
+		"process-timeout" : 3600,
+		"fxp-asset" : {
+			"enabled" : false
+		}
+	},
+	"repositories" : [{
+			"type" : "composer",
+			"url" : "https://asset-packagist.org"
+		}
+	]
 }
