--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
 		"kartik-v/yii2-popover-x" : "*",
 		"kartik-v/yii2-number" : "dev-master",
 		"2amigos/yii2-ckeditor-widget" : "~2.1",
-		"2amigos/yii2-gallery-widget" : "~1.0"
+		"2amigos/yii2-gallery-widget" : "~1.0",
+		"bower-asset/owl.carousel": "*"
 	},
 	"require-dev" : {
 		"yiisoft/yii2-debug" : "~2.0.0",
