Penambahan npm/popper.js

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
 		"kartik-v/yii2-number" : "dev-master",
 		"2amigos/yii2-ckeditor-widget" : "~2.1",
 		"npm-asset/owl.carousel": "2.3.4",
+		"npm-asset/popper.js": "1.14.3",
 		"npm-asset/bootstrap-material-design": "4.1.1"
 	},
 	"require-dev" : {
