--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
 		"2amigos/yii2-ckeditor-widget" : "~2.1",
 		"npm-asset/owl.carousel": "2.3.4",
 		"npm-asset/popper.js": "1.14.3",
-		"npm-asset/bootstrap-material-design": "4.1.1"
+		"npm-asset/bootstrap-material-design": "4.1.1",
+		"npm-asset/rateyo": "2.3.5"
 	},
 	"require-dev" : {
 		"yiisoft/yii2-debug" : "~2.0.0",
